syntax = "proto3";

package hello;

option go_package="./hello";

message HelloReq {
    string name=1;
    int64 age=2;
}

message HelloRes {
    int32 code=1;
    string greet_msg=2;
}

service helloService {
    rpc GetHello (HelloReq) returns (HelloRes);
}